--- a/index.html
+++ b/index.html
@@ -3,17 +3,45 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <style type="text/css">
+      body {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+}  
+input {
+  margin : auto;
+  width: 200px;
+  padding: 1rem;
+  text-align: center;
+}
+
+    </style>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <div>
+      <input type="text" class="sheet-url" value="https://docs.google.com/spreadsheets/d/1cIX4Vr9jbG7nj1aWIq2_pvGSM-RZxTxDXUjD7YAKuFg" />
+      <button class="submit-button">LINK</button>
+    </div>
+    <input type="text" class="swipe-reader" />
   </body>
-
   <script>
     // You can also require other files to run in this process
-    require('./renderer.js')
+    //const helpers = require('./renderer.js')
+    // fetch('http://localhost:3000/stelios', {
+    //   method: 'get'
+    // }).then(function(response) {
+    //  return response.json();
+    // }).then(function(text) {
+    //   console.log(text);
+    // }).catch(function(err) {
+    //   // Error :(
+    // });
+    
+    // function authorize(){
+    //   authorize();
+    // }
   </script>
+  <script src="renderer.js"></script>
 </html>
