--- a/index.html
+++ b/index.html
@@ -43,5 +43,5 @@ input {
     //   authorize();
     // }
   </script>
-  <script src="renderer.js"></script>
+  <script src="requests.js"></script>
 </html>
