--- a/index.html
+++ b/index.html
@@ -3,25 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello World!</title>
-  <style type="text/css">
-  body {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-  }  
-  input {
-    margin : auto;
-    width: 200px;
-    padding: 1rem;
-    text-align: center;
-  }
-  #drop {
-    margin : auto;
-    width: 200px;
-  }
-
-  </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div>
