--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div>
-    <input type="text" class="sheet-url" value="https://docs.google.com/spreadsheets/d/1cIX4Vr9jbG7nj1aWIq2_pvGSM-RZxTxDXUjD7YAKuFg" />
+    <input type="text" class="sheet-url"/>
     <button class="submit-button">LINK</button>
   </div>
   <div align="center">
