fixes swipe bug, intoduced export

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <select name="mydropdown" class="drop">
     </select>
   </div>
-  <input type="text" class="swipe-reader" />
+  <div>
+    <input type="text" class="swipe-reader" />
+  </div>
+  <div>
+    <button class="export-button">EXPORT</button>
+  </div>
 </body>
 <script>
 </script>
