email text area, export changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Hello World!</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
   <div>
@@ -19,7 +20,12 @@
   </div>
   <div>
     <button class="export-button">EXPORT</button>
+    <button class="text-area-button">Toggle email</button>
+    <button class="email-default">Get Default</button>
+    <button class="email-save">Save</button>
+    <button class="email-cancel">Cancel</button>
   </div>
+  <textarea class="textarea"></textarea>
 </body>
 <script>
 </script>
