--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <button class="submit-button">Submit</button>
     </div>
     <select name="sheets" class="sheet-options"></select>
+    <button class="about-button">About Swipe50</button>
   </section>
 
   <section class="page-2">
@@ -38,6 +39,34 @@
     <div>
       <button class="export-button">Export Swipe Data</button>
     </div>
+  </section>
+
+  <section class="page-4">
+    <h1>About Swipe50</h1>
+    <h2>What it is</h2>
+    <p>
+      Allows you to swipe Harvard and Yale ID cards, whose holders' names, emails
+      and timestamps will be stored in your google spreadsheet. Available to all
+      Harvard/Yale credential holders. <br> <br> Note: Hardware (magnetic stipe reader or
+      proximity reader) is required.
+    </p>
+    <h2>How to use it</h2>
+    <p>
+      1) Create a <a href="https://docs.google.com/spreadsheets" target="_blank">new Spreadsheet</a><br>
+      2) Open your spreadsheet, and click on the blue Share button (top right)<br>
+      3) Click "Advanced" (bottom-left of Share window), and under "Who has access"
+      hit "Change..." (in blue).<br>
+      4) Select either "On - Anyone with the link" (recommended) OR
+      "On - Public on the web" (not recommended)<br>
+      5) Make sure "Access:" is set to "Can edit"<br>
+      6) Connect the hardware to your computer <br>
+      7) Click "Save", then "Done". Copy the entire url from the URL bar (this is your spreadsheet's
+      URL) and paste it into application's "Connect to Spreadsheet" url box <br>
+      8) Click Submit, then choose a specific sheet. <br>
+      9) Draft an email to send to attendees <br>
+      10) Start swiping!
+    </p>
+    <button class="top-button">Back</button>
   </section>
 
 </body>
