all emails, comments and clean up

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <section class="page-2">
     <h1>Draft your email</h1>
-    <p>Draft email to send to people swiping into your event (in HTML), then click Save. Click Preview to preview the email, Get Default for default email template, and Cancel to revert to last stored state.</p>
+    <p>Draft email to send to people swiping into your event (in HTML), then click Save to continue. Click Preview to preview the email, Get Default for default email template, and Cancel to revert to last stored state.</p>
     <textarea class="text-edit" rows="20" cols="40"></textarea>
     <article class="textarea"></article>
     <p>Note that <%= name %> is a required placeholder for substituting swiper's name in the email</p>
@@ -39,6 +39,10 @@
     <div>
       <button class="export-button">Export Swipe Data</button>
     </div>
+    <div>
+      <button class="all-emails">Get Email Addresses</button>
+    </div>
+    <article class="emails-area"></article>
   </section>
 
   <section class="page-4">
