small fixes, flag and / bug

--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
       9) Draft an email to send to attendees <br>
       10) Start swiping!
     </p>
+    <h2>Warnings</h2>
+    <p>
+      The spreadsheet *must* exist<br>
+      The spreadhsheet *must* be writeable by anyone with the url (for cs50 staff, it *must* be writeable only by our service account)<br>
+      Sheet names *must not* contain the character / (frontslash)<br>
+    </p>
     <button class="top-button">Back</button>
   </section>
 
